cheat to avoid unnecessary vertical scrollbar on former design
git-svn-id: https://svn.code.sf.net/p/xigmanas/code/trunk@4687 beaaabd7-781f-4c1e-bc4d-5cfe25df7511

--- a/www/css/gui.css
+++ b/www/css/gui.css
@@ -64,6 +64,8 @@ body a:hover {
 }
 form {
 	margin: 0px;
+}
+body > form {
 	height: 100%;
 }
 div#pagebodyflex {
